# Web-Development

./: .gitignore  README.md
.github/workflows/: main.yml
lab1/Abstract Factory/: main.py
lab1/Composite/: main.py
lab1/Iterator/: main.py
lab2/: Dockerfile  main.py  pyproject.toml
lab3/: package-lock.json  package.json
lab3/src/: App.js
lab4/: pyproject.toml  test_main.py
